fix: 调整 Notification 的 z-index 至高于 Modal， 并调整位置

--- a/src/components/Notification/index.scss
+++ b/src/components/Notification/index.scss
@@ -2,8 +2,8 @@
 
 .rc-notification {
     position: fixed;
-    z-index: 10000;
-    top: $gap;
+    z-index: z-index(5);
+    top: $gap + rem(44);
     right: $gap;
     max-width: calc(100% - #{$gap * 2});
 }
